student prediction work in progress

--- a/notebooks/student_performance.ipynb
+++ b/notebooks/student_performance.ipynb
@@ -539,6 +539,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Comparing the students' grades by Mother's Job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perc = (lambda col: col/col.sum())\n",
+    "index = ['Poor','Average','Excellent']\n",
+    "mother_job_index = pd.crosstab(index=student_df.final_grade, columns=student_df.mother_job)\n",
+    "mother_job_index = mother_job_index.apply(perc).reindex(index)\n",
+    "mother_job_index.plot.bar(fontsize=16, figsize=(14,8))\n",
+    "plt.title(\"Grade vs Mother's Job\", fontsize=20)\n",
+    "plt.ylabel('Percentage of Students', fontsize=16)\n",
+    "plt.xlabel('Final Grade', fontsize=16)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparing the students' grades by Father's Job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perc = (lambda col: col/col.sum())\n",
+    "index = ['Poor','Average','Excellent']\n",
+    "father_job_index = pd.crosstab(index=student_df.final_grade, columns=student_df.father_job)\n",
+    "father_job_index = father_job_index.apply(perc).reindex(index)\n",
+    "father_job_index.plot.bar(fontsize=16, figsize=(14,8))\n",
+    "plt.title(\"Grade vs Father's Job\", fontsize=20)\n",
+    "plt.ylabel('Percentage of Students', fontsize=16)\n",
+    "plt.xlabel('Final Grade', fontsize=16)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Comparing the students' grades by Study time"
    ]
   },
