--- a/notebooks/student_performance.ipynb
+++ b/notebooks/student_performance.ipynb
@@ -587,6 +587,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Comparing the students' grades by Mother's Education"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perc = (lambda col: col/col.sum())\n",
+    "index = ['Poor','Average','Excellent']\n",
+    "mother_education_index = pd.crosstab(index=student_df.final_grade, columns=student_df.mother_education)\n",
+    "mother_education_index = mother_education_index.apply(perc).reindex(index)\n",
+    "mother_education_index.plot.bar(fontsize=16, figsize=(14,8))\n",
+    "plt.title(\"Grade vs Mother's Education\", fontsize=20)\n",
+    "plt.ylabel('Percentage of Students', fontsize=16)\n",
+    "plt.xlabel('Final Grade', fontsize=16)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparing the students' grades by Father's Education"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perc = (lambda col: col/col.sum())\n",
+    "index = ['Poor','Average','Excellent']\n",
+    "father_education_index = pd.crosstab(index=student_df.final_grade, columns=student_df.father_education)\n",
+    "father_education_index = father_education_index.apply(perc).reindex(index)\n",
+    "father_education_index.plot.bar(fontsize=16, figsize=(14,8))\n",
+    "plt.title(\"Grade vs Father's Education\", fontsize=20)\n",
+    "plt.ylabel('Percentage of Students', fontsize=16)\n",
+    "plt.xlabel('Final Grade', fontsize=16)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparing the students' grades by Desire higher Education"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perc = (lambda col: col/col.sum())\n",
+    "index = ['Poor','Average','Excellent']\n",
+    "desire_higher_edu_index = pd.crosstab(index=student_df.final_grade, columns=student_df.desire_higher_edu)\n",
+    "desire_higher_edu_index = desire_higher_edu_index.apply(perc).reindex(index)\n",
+    "desire_higher_edu_index.plot.bar(fontsize=16, figsize=(14,8))\n",
+    "plt.title(\"Grade vs Desire Higher Education\", fontsize=20)\n",
+    "plt.ylabel('Percentage of Students', fontsize=16)\n",
+    "plt.xlabel('Final Grade', fontsize=16)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Comparing the students' grades by Study time"
    ]
   },
@@ -683,6 +755,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Comparing the students' grades by Parent cohabiting Status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perc = (lambda col: col/col.sum())\n",
+    "index = ['Poor','Average','Excellent']\n",
+    "parents_cohabitation_status_index = pd.crosstab(index=student_df.final_grade, columns=student_df.parents_cohabitation_status)\n",
+    "parents_cohabitation_status_index = parents_cohabitation_status_index.apply(perc).reindex(index)\n",
+    "parents_cohabitation_status_index.plot.bar(fontsize=16, figsize=(14,8))\n",
+    "plt.title('Grade vs Parents Cohabitation Status', fontsize=20)\n",
+    "plt.ylabel('Percentage of Students', fontsize=16)\n",
+    "plt.xlabel('Final Grade', fontsize=16)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Comparing the students' grades by Age"
    ]
   },
@@ -698,6 +794,54 @@
     "age_index = age_index.apply(perc).reindex(index)\n",
     "age_index.plot.bar(fontsize=16, figsize=(14,8))\n",
     "plt.title('Grade vs Age', fontsize=20)\n",
+    "plt.ylabel('Percentage of Students', fontsize=16)\n",
+    "plt.xlabel('Final Grade', fontsize=16)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparing the students' grades by Failures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perc = (lambda col: col/col.sum())\n",
+    "index = ['Poor','Average','Excellent']\n",
+    "failures_index = pd.crosstab(index=student_df.final_grade, columns=student_df.failures)\n",
+    "failures_index = failures_index.apply(perc).reindex(index)\n",
+    "failures_index.plot.bar(fontsize=16, figsize=(14,8))\n",
+    "plt.title('Grade vs Failures', fontsize=20)\n",
+    "plt.ylabel('Percentage of Students', fontsize=16)\n",
+    "plt.xlabel('Final Grade', fontsize=16)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparing the students' grades by Free Time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perc = (lambda col: col/col.sum())\n",
+    "index = ['Poor','Average','Excellent']\n",
+    "free_time_index = pd.crosstab(index=student_df.final_grade, columns=student_df.free_time)\n",
+    "free_time_index = free_time_index.apply(perc).reindex(index)\n",
+    "free_time_index.plot.bar(fontsize=16, figsize=(14,8))\n",
+    "plt.title('Grade vs Free Time', fontsize=20)\n",
     "plt.ylabel('Percentage of Students', fontsize=16)\n",
     "plt.xlabel('Final Grade', fontsize=16)\n",
     "plt.show()"
@@ -797,6 +941,151 @@
     "plt.ylabel('Percentage of Students', fontsize=16)\n",
     "plt.xlabel('Final Grade', fontsize=16)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Gender Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['sex'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'sex', data=student_df, order=['M','F'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"gender\")\n",
+    "figure.grid(False)\n",
+    "plt.title('Gender Distribution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### School Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['school'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'school', data=student_df, order=['GP','MS'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"school\")\n",
+    "figure.grid(False)\n",
+    "plt.title('School Distribution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Address Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['address'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'address', data=student_df, order=['U','R'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"address\")\n",
+    "figure.grid(False)\n",
+    "plt.title('Address Distribution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Age Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['age'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'age', data=student_df, order=[15,16,17,18,19,20,21,22])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"age\")\n",
+    "figure.grid(False)\n",
+    "plt.title('Age Distribution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Family Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['family_size'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'family_size', data=student_df, order=['GT3','LE3'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"family_size\")\n",
+    "figure.grid(False)\n",
+    "plt.title('Family Size Distribution')"
    ]
   },
   {
