work in progress

--- a/notebooks/student_performance.ipynb
+++ b/notebooks/student_performance.ipynb
@@ -1092,6 +1092,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Parent Cohabiting Status Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['parents_cohabitation_status'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'parents_cohabitation_status', data=student_df, order=['A','T'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"parents_cohabitation_status\")\n",
+    "figure.grid(False)\n",
+    "plt.title('Parent Cohabiting Status Distribution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mother's Education Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['mother_education'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'mother_education', data=student_df, order=[0,1,2,3,4])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"mother_education\")\n",
+    "figure.grid(False)\n",
+    "plt.title(\"Mother's Education Distribution\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### From this we can tell that the distribution of the grades is decent and doesn't require any further skewness correction yet. We can go with this distribution for now to analyze the data and create a primitive model and it's error rate first. We can look into data processing of the final grade field afterwards if the results aren't satisfactory."
    ]
   },
