--- a/notebooks/student_performance.ipynb
+++ b/notebooks/student_performance.ipynb
@@ -478,13 +478,8 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "#### We can see that most students goes out with their friends on average"
+    "#### We can see that most students go out with their friends on average"
    ]
   },
   {
@@ -923,7 +918,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Comparing the students' grades by Going out with friends"
+    "#### Comparing the students' grades vs Going out with friends"
    ]
   },
   {
@@ -1121,6 +1116,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Reason to choose Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['reason'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'reason', data=student_df, order=['home','reputation','course','other'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"reason to chose this school\")\n",
+    "figure.grid(False)\n",
+    "plt.title(\"Reason to choose Distribution\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Guardian Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['guardian'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'guardian', data=student_df, order=['mother','father','other'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"Guardian\")\n",
+    "figure.grid(False)\n",
+    "plt.title(\"Guardian Distribution\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Mother's Education Distribution"
    ]
   },
@@ -1144,6 +1197,296 @@
     "ax = ax.set(ylabel=\"Count\", xlabel=\"mother_education\")\n",
     "figure.grid(False)\n",
     "plt.title(\"Mother's Education Distribution\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Father's Education Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['father_education'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'father_education', data=student_df, order=[0,1,2,3,4])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"father_education\")\n",
+    "figure.grid(False)\n",
+    "plt.title(\"Father's Education Distribution\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mother's Job Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['mother_job'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'mother_job', data=student_df, order=['teacher','health','services','at_home','other'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"mother_job\")\n",
+    "figure.grid(False)\n",
+    "plt.title(\"Mother's Job Distribution\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Father's Job Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['father_job'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'father_job', data=student_df, order=['teacher','health','services','at_home','other'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"father_job\")\n",
+    "figure.grid(False)\n",
+    "plt.title(\"Father's Job Distribution\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Commute time Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['commute_time'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'commute_time', data=student_df, order=[1,2,3,4])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"commute_time\")\n",
+    "figure.grid(False)\n",
+    "plt.title('Commute Time Distribution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Study time Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['study_time'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'study_time', data=student_df, order=[1,2,3,4])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"study_time\")\n",
+    "figure.grid(False)\n",
+    "plt.title('Study Time Distribution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### School Support Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['school_support'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'school_support', data=student_df, order=['yes','no'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"school_support\")\n",
+    "figure.grid(False)\n",
+    "plt.title('School Support Distribution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Family Support Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['family_support'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'family_support', data=student_df, order=['yes','no'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"family_support\")\n",
+    "figure.grid(False)\n",
+    "plt.title('Failure Distribution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Paid Classes Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['paid_classes'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'paid_classes', data=student_df, order=['yes','no'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"paid_classes\")\n",
+    "figure.grid(False)\n",
+    "plt.title('Paid Classes Distribution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Internet Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['internet'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'internet', data=student_df, order=['yes','no'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"internet\")\n",
+    "figure.grid(False)\n",
+    "plt.title('Internet Distribution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Failure Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_df['failures'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "figure = sns.countplot(x = 'failures', data=student_df, order=['yes','no'])\n",
+    "ax = ax.set(ylabel=\"Count\", xlabel=\"failures\")\n",
+    "figure.grid(False)\n",
+    "plt.title('Failure Distribution')"
    ]
   },
   {
