chore: updating model notebook

--- a/notebooks/exploratory data analysis and visualizations.ipynb
+++ b/notebooks/exploratory data analysis and visualizations.ipynb
@@ -24,7 +24,7 @@
     "### Dataset\n",
     "This project analyses students' achievements in secondary education of two Portuguese schools. The attributes of the dataset include student grades, demographic, social and school-related features) and it was collected by using school reports and questionnaires. Two datasets are provided regarding the performance in two distinct subjects: Mathematics (mat) and Portuguese language (por).\n",
     "\n",
-    "I classified the students into three categories, \"excellent\", \"average\", and \"poor\", according to their final exam performance. Then I analyzed a few features that have significant influence on students' final performance, including using the internet as a learning resource,Romantic Status, Alcohol Consumption, Parents Education Level, etc. Finally, using available predictive features, I have tried various machine learning models to predict students' final performance classification and have compared models performance based on ROC index.\n",
+    "I classified the students into two categories, \"pass\" and \"fail\", according to their final exam performance. Then I analyzed a few features that have significant influence on students' final performance, including using the internet as a learning resource,Romantic Status, Alcohol Consumption, Parents Education Level, etc. Finally, using available predictive features, I have tried various machine learning models to predict students' final performance classification and have compared models performance based on ROC index.\n",
     "\n",
     "Dataset available at: http://archive.ics.uci.edu/ml/datasets/Student+Performance#"
    ]
@@ -1867,7 +1867,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pass: 10~20, Fail: 0~9"
+    "#### Pass: 10~20, Fail: 0~9"
    ]
   },
   {
